--- a/sites/all/themes/cc_zen/sass/components/_donate.scss
+++ b/sites/all/themes/cc_zen/sass/components/_donate.scss
@@ -1,5 +1,5 @@
 .page-civicrm-contribute {
   .main-content {
-    color: color(grey-medium-dark);
+    color: color(grey-dark);
   }
 }
