--- a/sites/all/themes/cc_zen/sass/components/_footer.scss
+++ b/sites/all/themes/cc_zen/sass/components/_footer.scss
@@ -31,7 +31,7 @@
     a {
       padding-left: 10px;
       padding-right: 10px;
-      border-right: 1px solid color(white);
+      border-right: 1px solid color(white-transparent);
     }
     &.first a {
       padding-left: 0;
